--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-<h1>TEST OK – PIANETA 3D LAB</h1>
-
+<div style="padding:20px;background:#ffeb3b;color:#000;font-weight:bold">
+  ✅ TEST NETLIFY OK – SE VEDI QUESTO, GITHUB È COLLEGATO
+</div>
